--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
 #  twitter: dbtek
  # pinterest: asd123
   linkedin: khemkapiyush
-  bio: TODO : Add bio in config file
+  bio:  Add bio in config file (TODO)
  # email_md5: 726351295ec82e145928582f595aa3aa
 
 #rss_path: feed.xml
