--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 disqus: piy9
 # google_analytics: dbyll
