--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,10 +1,11 @@
 # Site
 name: "Mediumish"
+name: "Mediumish"
 title: "Mediumish"
 description: "Piyush's blog."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /blog
+baseurl: '/blog'
 # google_analytics: 'UA-46278016-1'
 disqus: 'piy9'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
