added jekyll blog

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,13 +1,13 @@
 # Site
-name: "Mediumish"
-name: "Mediumish"
-title: "Mediumish"
-description: "Piyush's blog."
+name: "Blog"
+title: "Blog"
+#description: "Piyush's blog."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: '/blog'
+mainurl: 'https://piyushkhemka.me'
 # google_analytics: 'UA-46278016-1'
-disqus: 'piy9'
+disqus: 'piyushkhemka'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
